--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 Flask==0.12.2
 Flask-RESTful==0.3.6
 Flask-Script==2.0.5
-numpy==1.13.1
-scipy==0.19.1
-pandas==0.20.3
-matplotlib==2.0.2
+pandas==0.25.0
+matplotlib==3.1.1
 networkx==1.11
-scikit-learn==0.18.2
+scikit-learn==0.21.3
 coclust==0.2.1
-jupyter==1.0.0
-ZODB
+ZODB==5.5.1
+BTrees==4.6.0
